# test_task_today

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3b836d28601f_first.py
app/: config.py  database.py  errors.py  main.py
app/api/dependencies/: auth.py  core.py  user.py
app/api/routers/: auth.py  teams.py  users.py
app/certs/: jwt-private.pem  jwt-public.pem
app/crud/: auth.py  team.py  user.py
app/models/: __init__.py  association.py  auth.py  team.py  user.py
app/schemas/: __init__.py  auth.py  team.py  user.py
app/services/: auth.py
app/utils/: auth.py
tests/: conftest.py
tests/auth/: test_login.py  test_signup.py
